--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -44,16 +44,16 @@
     <color name="bg_screen4">#f1e8df</color>
 
     <!-- dots inactive colors -->
-    <color name="dot_dark_screen1">#9e6027</color>
-    <color name="dot_dark_screen2">#9e6027</color>
-    <color name="dot_dark_screen3">#9e6027</color>
-    <color name="dot_dark_screen4">#9e6027</color>
+    <color name="dot_dark_screen1">#7e9f82</color>
+    <color name="dot_dark_screen2">#7e9f82</color>
+    <color name="dot_dark_screen3">#7e9f82</color>
+    <color name="dot_dark_screen4">#7e9f82</color>
 
     <!-- dots active colors -->
-    <color name="dot_light_screen1">#6c411a</color>
-    <color name="dot_light_screen2">#6c411a</color>
-    <color name="dot_light_screen3">#6c411a</color>
-    <color name="dot_light_screen4">#6c411a</color>
+    <color name="dot_light_screen1">#425f2f</color>
+    <color name="dot_light_screen2">#425f2f</color>
+    <color name="dot_light_screen3">#425f2f</color>
+    <color name="dot_light_screen4">#425f2f</color>
 
     <array name="array_dot_active">
         <item>@color/dot_light_screen1</item>
