--- a/app/src/main/res/layout/admin.xml
+++ b/app/src/main/res/layout/admin.xml
@@ -1,9 +1,90 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Main.Admin">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="@color/baru_putih"
+    android:fitsSystemWindows="true"
+    android:orientation="vertical"
+    android:gravity="center"
+    tools:context=".Fragment.HomeFragment">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <com.google.android.material.card.MaterialCardView
+        android:id="@+id/homeadmin_card1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:backgroundTint="@color/baru_pink"
+        app:cardCornerRadius="20dp"
+        android:layout_margin="10dp">
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+        <TextView
+            android:id="@+id/homeadmin_text1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="Menunggu Konfirmasi Whatsapp"
+            android:paddingVertical="5dp"
+            android:textSize="18sp"
+            android:textColor="@color/baru_hitam"
+            android:fontFamily="@font/sofia_pro_black_az"/>
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/homeadmin_rv1"
+            android:layout_below="@id/homeadmin_text1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:visibility="gone"/>
+        </RelativeLayout>
+    </com.google.android.material.card.MaterialCardView>
+    <com.google.android.material.card.MaterialCardView
+        android:layout_below="@id/homeadmin_card1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:backgroundTint="@color/baru_pink"
+        app:cardCornerRadius="20dp"
+        android:layout_marginHorizontal="10dp">
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <TextView
+                android:id="@+id/homeadmin_text2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="Pengembalian"
+                android:paddingVertical="5dp"
+                android:textSize="18sp"
+                android:textColor="@color/baru_hitam"
+                android:fontFamily="@font/sofia_pro_black_az"/>
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/homeadmin_rv2"
+                android:layout_below="@id/homeadmin_text2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:visibility="gone"/>
+        </RelativeLayout>
+    </com.google.android.material.card.MaterialCardView>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:alpha=".5"
+            android:layout_above="@id/nav_homeadmin"
+            android:background="@color/baru_abu" />
+        <com.google.android.material.bottomnavigation.BottomNavigationView
+            android:id="@+id/nav_homeadmin"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:background="@drawable/kotak"
+            app:itemIconTint="@drawable/nav_check"
+            app:itemTextColor="@drawable/nav_check"
+            app:menu="@menu/menuadmin" />
+    </RelativeLayout>
+</RelativeLayout>
