--- a/app/src/main/res/layout/isilistdetailbarang.xml
+++ b/app/src/main/res/layout/isilistdetailbarang.xml
@@ -2,7 +2,7 @@
 <com.google.android.material.card.MaterialCardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/isilistadmin_cardview"
+    android:id="@+id/isilist_cardview"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="10dp"
@@ -14,23 +14,25 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_margin="5dp"
-        android:weightSum="1"
         android:orientation="horizontal">
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:orientation="vertical">
             <TextView
-                android:id="@+id/isilist_user"
+                android:id="@+id/isilist_namabarang"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:hint="FID: ??"
+                android:layout_marginEnd="10dp"
+                android:hint="Barang: Kasur"
                 android:textColor="@color/pastel_ijomuda"
                 android:textSize="20sp"
                 android:fontFamily="@font/sofia_pro_black_az"/>
 
-        </LinearLayout>
-
+            <TextView
+                android:id="@+id/isilist_jumlahbarang"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:hint="Jumlah: 1"
+                android:textColor="@color/pastel_ijomuda"
+                android:textSize="20sp"
+                android:fontFamily="@font/sofia_pro_black_az"/>
     </LinearLayout>
 </com.google.android.material.card.MaterialCardView>
