--- a/app/src/main/res/layout/detailsberjalan.xml
+++ b/app/src/main/res/layout/detailsberjalan.xml
@@ -102,7 +102,7 @@
                 android:layout_weight=".5"
                 android:paddingVertical="5dp"
                 android:paddingHorizontal="5dp"
-                android:text="Konfirmasi"
+                android:text="Selesai"
                 android:textColor="@color/baru_putih"
                 android:background="@drawable/tombol"
                 android:fontFamily="@font/sofia_pro_black_az"/>
