--- a/app/src/main/res/layout/detailpromo.xml
+++ b/app/src/main/res/layout/detailpromo.xml
@@ -11,7 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
     <Button
-        android:id="@+id/details_btBack"
+        android:id="@+id/detailpromo_btBack"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="5dp"
@@ -22,7 +22,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:text="Detail Pesanan"
+        android:text="Detail Promo"
         android:textSize="25sp"
         android:textColor="@color/pastel_ijomuda"
         android:fontFamily="@font/sofia_pro_black_az"/>
@@ -35,18 +35,18 @@
         android:layout_margin="10dp"
         android:orientation="vertical">
         <TextView
-            android:id="@+id/details_tvUser"
+            android:id="@+id/detailpromo_tvNamaPaket"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:paddingVertical="5dp"
-            android:text="User: "
+            android:text="Nama paket: "
             android:textSize="18sp"
             android:fontFamily="@font/sofia_pro_medium_az"/>
         <TextView
             android:id="@+id/details_tvidUser"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:hint="FID:"
+            android:hint="Masa Berlaku: Satu bulan"
             android:fontFamily="@font/sofia_pro_light_az"/>
         <View
             android:layout_width="match_parent"
@@ -70,64 +70,38 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="20sp"
-            android:text="Barang"
+            android:text="Detail paket"
             android:textColor="@color/pastel_ijotua"
             android:fontFamily="@font/sofia_pro_black_az"/>
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/details_rvBarang"
+            android:id="@+id/detailpromo_rvPaket"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginVertical="10dp" />
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:textSize="20sp"
-            android:text="Hewan"
-            android:textColor="@color/pastel_ijotua"
-            android:fontFamily="@font/sofia_pro_black_az"/>
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/details_rvHewan"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginVertical="10dp" />
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
-                android:textSize="20sp"
-                android:text="Paket"
-                android:textColor="@color/pastel_ijotua"
-                android:fontFamily="@font/sofia_pro_black_az"/>
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/details_rvPaket"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginVertical="10dp"/>
+            android:layout_marginVertical="10dp"/>
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:weightSum="1">
             <Button
-                android:id="@+id/details_btKonfirmasi"
+                android:id="@+id/detailpromo_btPesan"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight=".5"
                 android:paddingVertical="5dp"
                 android:paddingHorizontal="5dp"
-                android:text="Selesai"
+                android:text="Pesan"
                 android:textColor="@color/baru_putih"
                 android:background="@drawable/tombol"
                 android:fontFamily="@font/sofia_pro_black_az"/>
                 <Button
-                    android:id="@+id/details_btwa"
+                    android:id="@+id/detailpromo_btwa"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="30dp"
                     android:layout_weight=".5"
                     android:paddingVertical="5dp"
                     android:paddingHorizontal="5dp"
-                    android:text="Hubungi klien"
+                    android:text="Hubungi admin"
                     android:textColor="@color/baru_putih"
                     android:background="@drawable/tombol"
                     android:fontFamily="@font/sofia_pro_black_az"/>
