--- a/app/src/main/res/layout/home.xml
+++ b/app/src/main/res/layout/home.xml
@@ -10,22 +10,60 @@
     android:gravity="center"
     tools:context=".Fragment.HomeFragment">
     <LinearLayout
+        android:id="@+id/beranda_menuutama"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:gravity="center">
     <TextView
-        android:layout_width="wrap_content"
+        android:id="@+id/beranda_teksbelumnitip"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:gravity="center"
+        android:layout_gravity="center"
         android:textColor="@color/baru_coklatgelapbanget"
         android:textSize="16sp"
         android:text="@string/belum_nitip"
-        android:fontFamily="@font/sofia_pro_black_az"/>
+        android:fontFamily="@font/sofia_pro_black_az"
+        android:visibility="visible"/>
+        <com.google.android.material.card.MaterialCardView
+            android:id="@+id/beranda_cvrvv"
+            android:layout_width="match_parent"
+            android:layout_height="300dp"
+            app:cardCornerRadius="50dp"
+            android:elevation="5dp"
+            android:backgroundTint="@color/baru_putih"
+            android:visibility="gone">
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+                <TextView
+                    android:id="@+id/profil_riwayat"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:layout_centerInParent="true"
+                    android:layout_alignParentTop="true"
+                    android:textSize="20sp"
+                    android:textStyle="bold"
+                    android:text="Sedang dipesan"
+                    android:textColor="@color/baru_coklatgelapbanget"
+                    android:fontFamily="@font/sofia_pro_black_az"/>
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/beranda_recycler_list"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginHorizontal="20dp"
+                    android:layout_marginVertical="27dp"
+                    android:paddingBottom="20dp"/>
+            </RelativeLayout>
+        </com.google.android.material.card.MaterialCardView>
     <Button
         android:id="@+id/home_tb_titip"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:paddingHorizontal="20dp"
+        android:layout_marginTop="20dp"
         android:background="@drawable/tombol"
         android:textColor="@color/baru_putih"
         android:text="@string/titip_sekarang"
