--- a/app/src/main/res/menu/menuutama.xml
+++ b/app/src/main/res/menu/menuutama.xml
@@ -2,11 +2,11 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/test_menu"
-        android:title="News"
-        android:icon="@drawable/news" />
+        android:title="Promo"
+        android:icon="@drawable/giftcard" />
     <item
         android:id="@+id/home_menu"
-        android:title="Home"
+        android:title="Beranda"
         android:icon="@drawable/home"/>
     <item
         android:id="@+id/info_menu"
